refactor: design change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">randomizer</string>
+    <string name="app_name">Randomizer</string>
+    <string name="generate">GENERATE</string>
+    <string name="back">BACK</string>
 </resources>
